# ChangeLog for x11-libs/libsynaptics
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-libs/libsynaptics/ChangeLog,v 1.10 2008/05/09 12:32:25 trapni Exp $

*libsynaptics-0.14.6c-r1 (09 May 2008)

  09 May 2008; Christian Parpart <trapni@gentoo.org>
  +files/libsynaptics-0.14.6c-r1-gcc-4-3-0.patch,
  +libsynaptics-0.14.6c-r1.ebuild:
  fixes compilation error with GCC 4.3.0 - closes bug 219548

  20 Jan 2008; Christoph Mende <angelos@gentoo.org>
  libsynaptics-0.14.6c.ebuild:
  Stable on amd64 wrt bug #202658

  22 Dec 2007; Tobias Scherbaum <dertobi123@gentoo.org>
  libsynaptics-0.14.6c.ebuild:
  ppc stable, bug #202660

  20 Dec 2007; Markus Meier <maekke@gentoo.org> libsynaptics-0.14.6c.ebuild:
  x86 stable, bug #202658

  14 May 2007; Christian Parpart <trapni@gentoo.org>
  libsynaptics-0.14.6c.ebuild:
  post-adding RDEPEND

*libsynaptics-0.14.6c (14 May 2007)

  14 May 2007; Christian Parpart <trapni@gentoo.org>
  +libsynaptics-0.14.6c.ebuild:
  version bump

*libsynaptics-0.14.6b (14 Sep 2006)

  14 Sep 2006; Christian Parpart <trapni@gentoo.org>
  +libsynaptics-0.14.6b.ebuild:
  version bump

*libsynaptics-0.14.6a (29 Aug 2006)

  29 Aug 2006; Christian Parpart <trapni@gentoo.org>
  +libsynaptics-0.14.6a.ebuild:
  version bump

  09 Jul 2006; Joseph Jezak <josejx@gentoo.org> libsynaptics-0.14.4d.ebuild:
  Marked ~ppc for bug #137731.

*libsynaptics-0.14.4d (28 Mar 2006)

  28 Mar 2006; Christian Parpart <trapni@gentoo.org> +metadata.xml,
  +libsynaptics-0.14.4d.ebuild:
  initial import
