@@ -1,3 +1,6 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 AUX libsynaptics-0.14.6c-r1-gcc-4-3-0.patch 241 RMD160 4eb7a8a094bfb27fe5d30d350afe6ba90f11ade3 SHA1 448c93e79589b46cd288daea92b114ad66f4775e SHA256 d0aff7c2acacd95267fd88dcf324fde5ea10851a96561aa228000b83fce9d1d5
 DIST libsynaptics-0.14.4d.tar.bz2 218980 RMD160 f982fc168b4244df23f18b3de4918ba0da82e8bc SHA1 af8d471366a18703e35b6c6fc736b39c579a56e1 SHA256 b2b7088d58fabba1d8a1be2ab21b8c8290cf91342e2d66bfe8d7ee09a299fe9d
 DIST libsynaptics-0.14.6a.tar.bz2 273947 RMD160 a1372235505ca078dfef86fcd3957f13729b881f SHA1 121a6ff0c00cac23a85818803d9b7942809a4120 SHA256 3dacf2b48c1351bcda6bf70fe96723a887c657b06f3abbd39bf57ede45bf3849
@@ -6,7 +9,14 @@ DIST libsynaptics-0.14.6c.tar.bz2 221401 RMD160 4fd949c0c4d6633d5a89cde34f52b7ea
 EBUILD libsynaptics-0.14.4d.ebuild 655 RMD160 1355fe6f0f6d3374cff28cdd6ad150027665ea12 SHA1 6eec90f53a41733459a55e75c5cd8e393ebc45d3 SHA256 8ac4e9c886d840b4c25f0527c5474353d688ede1adfa529fc03bca87ddfde9e2
 EBUILD libsynaptics-0.14.6a.ebuild 655 RMD160 7731997332104675fef5f91c65d6dcdde3446e2a SHA1 01d0bad2e07fbf467ac1675d5b8ebdc8b6112cd4 SHA256 2bd51253dcfc5865f0bd6bd15ffb5f390ffa3ca4ecef371d867a8da40e303a13
 EBUILD libsynaptics-0.14.6b.ebuild 655 RMD160 f1c698d79f908c87d80694adf512919ba08275eb SHA1 e7dd69c60a88f96901c34d52d46f892b434decf3 SHA256 ca441f97d163707795b7bbe56e5103dddb634ebbe0a01eba58ee52fa09a746cc
-EBUILD libsynaptics-0.14.6c-r1.ebuild 724 RMD160 32f0a1904ae4367a4ec7f4824d3dec069c52ebf7 SHA1 c929fce08f70d68f05e11d4096cd5063250aa7aa SHA256 b7c2c45eb8cb2ef78c7e1ac02a50dca96aa11d97fbee727f67ff6b3a7f3996ab
+EBUILD libsynaptics-0.14.6c-r1.ebuild 722 RMD160 209e8c0487f9dbb1f544b241425078c8a1c67991 SHA1 5bac4ae6d8c317659f667f6e358b66e2e058cc6e SHA256 2dcd88c4407fac0fa0b28fea262137f00043325f7d7100dd61469bc8f933d14b
 EBUILD libsynaptics-0.14.6c.ebuild 594 RMD160 b8c9cf8ef8f1461499b11627aff29d0052d57f99 SHA1 27f7ce7e4a61740988db54630411f383b69af182 SHA256 aa987547243129b7acd36c433d554af232f65c5d207969110f097551f3b9b5c9
-MISC ChangeLog 1577 RMD160 0be549b1aee4a60211563fd1c93b86c2cf855637 SHA1 da2c5349d5944143c423e34924a1d54a88d03f78 SHA256 642fe567c68df6cf5424b95ecd0a50d5550cebfd3da5e293a233001596f640e6
+MISC ChangeLog 1692 RMD160 ed6a18d6721f2e957d838043f034bb41e03c6445 SHA1 b403d1cb79a21ea826c4bf50a67be7c77a6b1206 SHA256 f9202c4b3d053e649068db406fb31a45ac505a6c5aef723680497c7791acbf3d
 MISC metadata.xml 222 RMD160 b3574c2544ec758fd7173ba9f340319e49416580 SHA1 14cf241c554f2c1360dfd4d715037b0b683ea5a7 SHA256 bda6678f6ab351a2a1ceae7dfb5e664af3cc7eecfefdd91c299e274454123cb5
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.9 (GNU/Linux)
+
+iEYEARECAAYFAkmDZgAACgkQkKaRLQcq0GKA+gCeIYTA3wveB8P+Msk8Jy7cP/mN
+XyUAn20sZkREI7JWX4s/HOJS/bHNPb7I
+=kJfd
+-----END PGP SIGNATURE-----
