@@ -1,6 +1,10 @@
 # ChangeLog for x11-libs/libsynaptics
-# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-libs/libsynaptics/ChangeLog,v 1.10 2008/05/09 12:32:25 trapni Exp $
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/x11-libs/libsynaptics/ChangeLog,v 1.11 2009/01/30 20:41:18 maekke Exp $
+
+  30 Jan 2009; Markus Meier <maekke@gentoo.org>
+  libsynaptics-0.14.6c-r1.ebuild:
+  amd64/x86 stable, bug #245862
 
 *libsynaptics-0.14.6c-r1 (09 May 2008)
 
